Atualiza imagens responsivas

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <p class="lead">Agora, perto de você, a oportunidade de saber mais sobre o que está rolando no mundo DevOps
                 e bater um papo com pessoas que entendem do assunto.</p>
 
-            <div class="card text-white bg-primary w-50 mx-auto text-center">
+            <div class="card text-white bg-primary mx-auto text-center largura-50">
                 <div class="card-header">
                     <h4>Evento Gratuito</h4>
                 </div>
@@ -91,8 +91,8 @@
             </div>
 
             <div class="d-flex flex-wrap flex-column justify-content-around align-items-center text-center py-3">
-                <div class="d-flex flex-wrap flex-column p-2">
-                    <img id="main-publi" class="w-50 mx-auto" src="img/main_publi.png" alt="Imagem com informações principais do meetup Docker & Companhia. Data: em dezembro. Local: Cidade Universitária. Meetup Sorocaba. Docker & Companhia. Informações pelo telefone com Marcos (15) 98808-2972" />
+                <div class="d-flex flex-wrap flex-column p-2 largura-50">
+                    <img id="main-publi" class="mx-auto" src="img/main_publi.png" alt="Imagem com informações principais do meetup Docker & Companhia. Data: em dezembro. Local: Cidade Universitária. Meetup Sorocaba. Docker & Companhia. Informações pelo telefone com Marcos (15) 98808-2972" />
                 </div>
                 <div class="d-flex flex-wrap flex-column p-2">
                     <a href="https://github.com/docker-sorocaba/Meetup.DockerFIle" class="link-fontawe-icon">
