Alterando responsividade dos cards

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
             <h4 class="display-4"><i class="fas fa-users"></i> Organizadores</h4>
             <div class="card-deck mt-5">
-                <div class="col-sm-12 col-md-4">
+                <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="card bg-light mb-3">
                         <div class="card-header">
                             <h5>Marcos Vinicius Rezende</h5>
@@ -199,7 +199,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-4">
+                <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="card bg-light mb-3">
                         <div class="card-header">
                             <h5>Fernanda Aparecida Ferreira</h5>
@@ -213,7 +213,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-4">
+                <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="card bg-light mb-3">
                         <div class="card-header">
                             <h5>Cristian Luis Pereira</h5>
@@ -225,7 +225,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-4">
+                <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="card bg-light mb-3">
                         <div class="card-header">
                             <h5>Josiane Thaís Oliveira</h5>
