Atualização da Agenda em INDEX
Correção do Link <HREF> para o Linkedin dos Palestrantes.

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         <h5 class="mb-1">Integrando Docker com Jenkins</h5>
                         <p>9h40 - 10h20</p>
                     </div>
-                    <p class="mt-1"><a href="https://www.linkedin.com/in/marcosrehzende/" target="_blank">Eduardo
+                    <p class="mt-1"><a href="https://www.linkedin.com/in/eduardofesilva/" target="_blank">Eduardo
                             Fonseca (CI&T)</a></p>
                     <p class="mb-1">A palestra irá demonstrar como realizar as configurações necessárias para se
                         trabalhar com o Docker utilizando a ferramenta de CI Jenkins. Além disso, demonstrará como
@@ -173,7 +173,7 @@
                         <h5 class="mb-1">Aplicação na Nuvem com GKE</h5>
                         <p>10h40 - 11h20</p>
                     </div>
-                    <p class="mt-1"><a href="https://www.linkedin.com/in/marcosrehzende/" target="_blank">Rodolfo
+                    <p class="mt-1"><a href="https://www.linkedin.com/in/rodolfo-neto-75b14311/" target="_blank">Rodolfo
                             Neto (GFT)</a></p>
                     <p class="mb-1">
                         <ul>
@@ -193,7 +193,7 @@
                         <h5 class="mb-1">Utilizando Infraestrutura Ágil com Práticas DevOps</h5>
                         <p>11h20 - 12h</p>
                     </div>
-                    <p class="mt-1"><a href="https://www.linkedin.com/in/marcosrehzende/" target="_blank">Gabriel
+                    <p class="mt-1"><a href="https://www.linkedin.com/in/gabriel-policante/" target="_blank">Gabriel
                             Policante Araújo (4Linux)</a></p>
                     <p class="mb-1">Se o desenvolvimento de software é ágil a infraestrutura também deve ser. Já
                         imaginou uma infraestrutura sendo escalável, automatizada, padronizada e versionada da mesma
