Adiciona patrocinio da UpperTools

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <p>9h - 9h40</p>
                     </div>
                     <p class="mt-1"><a href="https://www.linkedin.com/in/marcosrehzende/" target="_blank">Marcos
-                            Vinicius Rezende (AMENERGIA)</a></p>
+                            Vinicius Rezende (VENTRON)</a></p>
                     <p class="mb-1">A palestra tem como objetivo de explicar e mostrar na pratica o conceito básico de
                         funcionamento e instalação do docker.
                         <ul>
@@ -167,6 +167,7 @@
                         <p>10h20 - 10h40</p>
                     </div>
                     <p class="mb-1">Porque ninguém é de ferro <i class="fas fa-coffee"></i></p>
+                    <p><strong>Oferecido pela UpperTools</strong></p>
                 </div>
                 <div class="list-group-item flex-column align-items-start">
                     <div class="d-flex flex-wrap w-100 justify-content-between">
@@ -211,97 +212,85 @@
 
     </article>
 
-    <!-- <article id="patrocinio" class="jumbotron jumbotron-fluid">
+    <article id="patrocinio" class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h4 class="display-4"><i class="fas fa-bullhorn"></i> Patrocinadores <span class="badge badge-primary">Em
-                    breve</span></h4>
+            <h4 class="display-4"><i class="fas fa-bullhorn"></i> Patrocinadores</h4>
 
             <div class="card-deck mt-5">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">patrocinador</h5>
+                        <a href="https://www.uppertools.com.br/" target="_blank">
+                            <h5 class="card-title">UpperTools</h5>
+                            <img src="img/uppertools.svg">
+                        </a>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">patrocinador</h5>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">patrocinador</h5>
-                    </div>
-                </div>
-            </div
-        </div>
+            </div </div> </article> <article id="organizadores" class="jumbotron jumbotron-fluid">
+            <div class="container">
 
-    </article> -->
-
-    <article id="organizadores" class="jumbotron jumbotron-fluid">
-        <div class="container">
-
-            <h4 class="display-4"><i class="fas fa-users"></i> Organizadores</h4>
-            <div class="card-deck mt-5">
-                <div class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="card bg-light mb-3">
-                        <div class="card-header">
-                            <h5>Marcos Vinicius Rezende</h5>
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">Profissional de Infra TI</h5>
-                            <p class="card-text"><strong>Telefone:</strong> (15) 98808-2972</p>
-                            <p class="card-link"><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/marcosrehzende/"
-                                    target="_blank">marcosrehzende</a></p>
-                            <p class="card-text"><strong>Email:</strong> <a href="mailto:rehzende@hotmail.com" target="_blank">rehzende@hotmail.com</a></p>
+                <h4 class="display-4"><i class="fas fa-users"></i> Organizadores</h4>
+                <div class="card-deck mt-5">
+                    <div class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="card bg-light mb-3">
+                            <div class="card-header">
+                                <h5>Marcos Vinicius Rezende</h5>
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Profissional de Infra TI</h5>
+                                <p class="card-text"><strong>Telefone:</strong> (15) 98808-2972</p>
+                                <p class="card-link"><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/marcosrehzende/"
+                                        target="_blank">marcosrehzende</a></p>
+                                <p class="card-text"><strong>Email:</strong> <a href="mailto:rehzende@hotmail.com"
+                                        target="_blank">rehzende@hotmail.com</a></p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="card bg-light mb-3">
-                        <div class="card-header">
-                            <h5>Fernanda Aparecida Ferreira</h5>
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">Desenvolvedora AMEnergia</h5>
-                            <p class="card-link"><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/fernandaaparecida/"
-                                    target="_blank">fernandaaparecida</a></p>
-                            <p class="card-text"><strong>Email:</strong> <a href="mailto:ferreira.ap.fernanda@gmail.com"
-                                    target="_blank">ferreira.ap.fernanda@hotmail.com</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="card bg-light mb-3">
-                        <div class="card-header">
-                            <h5>Cristian Luis Pereira</h5>
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">Programador Java</h5>
-                            <p class="card-link"><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/cristianlpereira/"
-                                    target="_blank">cristianlpereira</a></p>
+                    <div class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="card bg-light mb-3">
+                            <div class="card-header">
+                                <h5>Fernanda Aparecida Ferreira</h5>
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Desenvolvedora AMEnergia</h5>
+                                <p class="card-link"><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/fernandaaparecida/"
+                                        target="_blank">fernandaaparecida</a></p>
+                                <p class="card-text"><strong>Email:</strong> <a href="mailto:ferreira.ap.fernanda@gmail.com"
+                                        target="_blank">ferreira.ap.fernanda@gmail.com</a></p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="card bg-light mb-3">
-                        <div class="card-header">
-                            <h5>Josiane Thaís Oliveira</h5>
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">Desenvolvedora Full Stack</h5>
-                            <p class="card-link"><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/josiane-tha%C3%ADs-oliveira-ba7b3415a/"
-                                    target="_blank">josiane-thaís-oliveira</a></p>
-                            <p class="card-text"><strong>Email:</strong> <a href="mailto:jts_oliveira@outlook.com"
-                                    target="_blank">jts_oliveira@outlook.com</a></p>
+                    <div class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="card bg-light mb-3">
+                            <div class="card-header">
+                                <h5>Cristian Luis Pereira</h5>
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Programador Java</h5>
+                                <p class="card-link"><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/cristianlpereira/"
+                                        target="_blank">cristianlpereira</a></p>
+                            </div>
                         </div>
                     </div>
-                </div>
+                    <div class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="card bg-light mb-3">
+                            <div class="card-header">
+                                <h5>Josiane Thaís Oliveira</h5>
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Desenvolvedora Full Stack</h5>
+                                <p class="card-link"><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/josiane-tha%C3%ADs-oliveira-ba7b3415a/"
+                                        target="_blank">josiane-thaís-oliveira</a></p>
+                                <p class="card-text"><strong>Email:</strong> <a href="mailto:jts_oliveira@outlook.com"
+                                        target="_blank">jts_oliveira@outlook.com</a></p>
+                            </div>
+                        </div>
+                    </div>
 
 
+
+                </div>
 
             </div>
-
-        </div>
 
     </article>
 
